--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css" />
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="shortcut icon" href="images/bus.png" type="image/x-icon">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <title>Bus Finder</title>
@@ -14,11 +16,12 @@
 <body class="bg-danger">
 
   <div class="container">
-    <p id="para" class="text-warning">WELCOME To Bus Finder</p>
-    <button id="henlowBay" type="submit" class="btn btn-secondary">Henlow Bay</button>
-    <button id="aldgateRoad" type="submit" class="btn btn-secondary">Aldgate Road</button>
+    <p id="para" class="text-warning">Welcome! To Bus Route Finder</p>
+    <button id="henlowBay" type="submit" class="btn btn-outline-dark mx-auto">Henlow Bay
+      <i class="fas fa-bus-alt"></i></button>
   </div>
 
+  <div id="henlowList"> </div>
 
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
     integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
@@ -29,7 +32,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
     integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
     crossorigin="anonymous"></script>
-  <script src="app.js"></script>
+  <script src="js/app.js"></script>
 </body>
 
 </html>
